// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/YomiFudaPhrase with anim 1`] = `
<span
  className="makeStyles-root-476 makeStyles-root-477 makeStyles-root-474 makeStyles-root-475"
>
  <span
    className="makeStyles-root-478"
    onAnimationEnd={[Function]}
    style={
      Object {
        "animationDuration": "1s",
      }
    }
  >
    秋
  </span>
  <span
    className="makeStyles-root-478"
    onAnimationEnd={[Function]}
    style={
      Object {
        "animationDuration": "1s",
      }
    }
  >
    の
  </span>
  <span
    className="makeStyles-root-478"
    onAnimationEnd={[Function]}
    style={
      Object {
        "animationDuration": "1s",
      }
    }
  >
    田
  </span>
  <span
    className="makeStyles-root-478"
    onAnimationEnd={[Function]}
    style={
      Object {
        "animationDuration": "1s",
      }
    }
  >
    の
  </span>
</span>
`;

exports[`Storyshots molecules/YomiFudaPhrase without anim 1`] = `
<span
  className="makeStyles-root-482 makeStyles-root-483 makeStyles-root-480 makeStyles-root-481"
>
  <span
    className="makeStyles-root-484"
    onAnimationEnd={[Function]}
    style={
      Object {
        "animationDuration": "0s",
      }
    }
  >
    秋
  </span>
  <span
    className="makeStyles-root-484"
    onAnimationEnd={[Function]}
    style={
      Object {
        "animationDuration": "0s",
      }
    }
  >
    の
  </span>
  <span
    className="makeStyles-root-484"
    onAnimationEnd={[Function]}
    style={
      Object {
        "animationDuration": "0s",
      }
    }
  >
    田
  </span>
  <span
    className="makeStyles-root-484"
    onAnimationEnd={[Function]}
    style={
      Object {
        "animationDuration": "0s",
      }
    }
  >
    の
  </span>
</span>
`;
